# remote_server_tasktray

./: .gitignore  CMakeLists.txt  DebugLog.cpp  DebugLog.h  DeviceKeyCrypto.cpp  DeviceKeyCrypto.h  DeviceSignKey.cpp  DeviceSignKey.h  DisplayManager.cpp  DisplayManager.h  DisplaySyncServer.cpp  DisplaySyncServer.h  Ed25519DeviceKey.cpp  Ed25519DeviceKey.h  GPUInfo.h  GPUManager.cpp  GPUManager.h  Globals.cpp  Globals.h  ModeSyncServer.cpp  ModeSyncServer.h  OverlayManager.cpp  OverlayManager.h  README.md  RegistryHelper.cpp  RegistryHelper.h  RemoteDesktopStateV1.h  Resource.h  SecureLineCrypto.cpp  SecureLineCrypto.h  SharedMemoryHelper.cpp  SharedMemoryHelper.h  StringConversion.cpp  StringConversion.h  TaskTrayApp.cpp  TaskTrayApp.h  Utility.cpp  Utility.h  cppcheck-report.txt  cppcheck.txt  (+13 more)
UI/: Main_UI.ui
